# Bot-Services

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/services/bot/: Dockerfile  ai_messenger.py  comment_bot.py  login_bot.py  model.py  pika_service.py
src/services/bot/core/: config.py
src/services/bot/sessions/: khaliq.json  williamzzbea.json
src/services/dispatcher/: Dockerfile  dispatch.py  pika_service.py  server.py
src/services/dispatcher/core/: config.py
src/services/scraper/: Dockerfile  app.py  get_gender.py  server.py  supabase_service.py  user_info.py
src/services/scraper/core/: config.py
src/services/splitter/: Dockerfile  server.py  user_splitter.py
